<resources>
    <string name="app_name">LoochaMedialibrary</string>
    <string name="str_all_photo_and_video">所有照片</string>
    <string name="str_all_video">所有视频</string>
    <string name="str_album">相册</string>
    <string name="str_edit">编辑</string>
    <string name="str_select">选择</string>
    <string name="str_complete">完成</string>
    <string name="str_complete_with_count">完成(%1$s/%2$s)</string>
    <string name="str_capture">拍摄</string>
    <string name="str_preview">预览</string>
    <string name="str_capture_hint">点击拍照 长按录像</string>
    <string name="str_capture_hint_picture">点击拍照</string>
    <string name="str_capture_hint_video">长按录像</string>
    <string name="str_capture_video_time_short">录像时间太短，请重试!</string>
    <string name="str_max_count">已达最大选择数!</string>
    <string name="str_close">关闭</string>
    <string name="str_cut">裁剪</string>
    <string name="str_rotate">旋转</string>
    <string name="str_filter">滤镜</string>
    <string name="str_save_fail">保存失败</string>

    <string name="filter_ori">原始</string>
    <string name="filter_ue1">黑白2</string>
    <string name="filter_ue2">3D</string>
    <string name="filter_ue3">黑白1</string>
    <string name="filter_ue4">风景1</string>
    <string name="filter_ue5">食物1</string>
    <string name="filter_ue6">日常生活</string>
    <string name="filter_ue7">夏日之蓝</string>
    <string name="filter_ue8">冬日寂静</string>
    <string name="filter_ue9">复古宁静</string>
    <string name="filter_ue10">柯达胶卷</string>
    <string name="filter_ue11">食物</string>
    <string name="filter_ue12">城市</string>
    <string name="filter_ue13">现代</string>
    <string name="filter_ue14">拍立得</string>
    <string name="filter_ue15">HDR</string>
    <string name="filter_ue16">温和人像</string>
</resources>
