<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#333333"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@id/id_layout_header"
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <TextView
            android:id="@id/id_back"
            android:textSize="14dp"
            android:textColor="#ffffff"
            android:text="@string/str_close"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@id/id_title"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:drawableRight="@drawable/icon_down_arrow"
            android:padding="5dp"
            android:drawablePadding="5dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@id/id_complete"
            android:textSize="14dp"
            android:textColor="#333333"
            android:text="@string/str_complete"
            android:background="@drawable/bg_complete_selector"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:enabled="false"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_width="wrap_content"
            android:layout_height="27dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@id/id_footer"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <TextView
            android:id="@id/id_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/str_preview"
            android:textSize="15dp"
            android:textColor="@color/color_preview_selector"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@id/id_grid_view"
        android:layout_below="@id/id_layout_header"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/id_footer"
        android:clipToPadding="false"/>

</RelativeLayout>